--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,10 @@ body{
     background-image: url(assets/images/crystal.jpg);
     
 }
-.amethyst
-.lapis
-.peridot
+.amethyst,
+.lapis,
+.peridot,
 .pearl {
-    width: 1050px;
-    height: 500px;
+    width: 200px;
+    height: 300px;
 }
